--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,10 @@ ul{
 ul li{
 	display: inline-block;
 }
+
+ul li a{
+	text-decoration: none;
+	color: #fff;
+	padding: 5px 20px;
+	border: 1px solid #fff;
+}
